# new-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  Engine Overview.md  README.md  Vulkan Overview.md  init-dir.bat  init-dir.sh
.VSCodeCounter/2023-06-19_09-31-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
default_models/: inv_cube.mtl  inv_sphere.mtl
default_models/blender/: cube.blend  cube.blend1  inv_cube.blend  inv_cube.blend1  inv_sphere.blend  inv_sphere.blend1  sphere.blend  sphere.blend1
default_models/circle/: EmptyCircle.kra  circle.kra  circle.mtl  circle.png~  emptycircle.mtl
examples/: CMakeLists.txt  ecs-example.cpp  euler_fluid.cpp  gui-example.cpp  interface.cpp  main-devel.cpp  math-test.cpp  render-loop-example.cpp  rope-sim.cpp  simple-fluid-example.cpp
examples/physx/: main.cpp
include/: buffer.h  component-editor.h  dependency.h  ecs.h  flags.h  gizmos.h  gui.h  host_buffer.h  image.h  logger.h  material.h  math-core.h  mesh.h  model-handler.h  model_handler.h  models.h  nve.h  nve_types.h  nve_types_fwd.h  pbd.h  physics.h  post_processing.h  profiler.h  reference.h  render.h  render_task.h  shader.h  shader_compiler.h  simple_fluid.h  space_consistent_vector.h  spatial_hash_grid.h  thread_pool.h  tritri.h  vulkan_helpers.h  vulkan_types.h
include/pbd/: fluid_constraints.h
include/vulkan/: buffer.h  pipeline.h  raytracing_handles.h  vulkan_handles.h  vulkan_handles_fwd.h  vulkan_helpers.h
shaders/: a.spv  models_cam_vert.spv  shader_cam.vert  vert.spv
shaders/dynamic_geometry/: default_unlit.vert  default_unlit.vert.spv
shaders/fragments/: lamb_wmat.frag  lamb_wmat.frag.spv  unlit_wmat.frag  unlit_wmat.frag.spv
shaders/static_geometry/: default_unlit.frag  default_unlit.frag.spv  default_unlit.vert  default_unlit.vert.spv
shaders/vertex/: static.vert  static.vert.spv  transform_wmat.vert  transform_wmat.vert.spv
src/: dependency.cpp  ecs.cpp  flags.cpp  gizmos.cpp  gui.cpp  image.cpp  logger.cpp  main.cpp  material.cpp  math-core.cpp  mesh.cpp  model-handler.cpp  models.cpp  nve_types.cpp  pbd.cpp  physics.cpp  post_processing.cpp  profiler.cpp  render.cpp  shader.cpp  simple_fluid.cpp  spatial_hash_grid.cpp  thread_pool.cpp  tritri.cpp  vulkan_helpers.cpp
src/pbd/: fluid_constraints.cpp
src/vulkan/: model_handler.cpp  pipeline.cpp  raytracing_handles.cpp  vulkan_handles.cpp  vulkan_helpers.cpp
